fixtures/valid/wake-basic.crumb
BEGIN CRUMB
v=1.1
kind=wake
title=Session wake
source=palace
---
[identity]
- owner: alice
- wings: 2
- rooms: 6
END CRUMB
