fixtures/invalid/missing-begin.crumb
v=1.1
kind=task
title=No begin marker
source=cli
---
[goal]
Missing BEGIN CRUMB line.

[context]
- Parser MUST reject.

[constraints]
- Parser MUST reject.
END CRUMB
